// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsLayout 组件 demo 测试 正确渲染 MsLayout error.tsx 1`] = `
<div>
  <div
    class="ms-layout"
    style="height: calc(100vh - 0px);"
  >
    <div
      class="ms-slider"
      style="width: 184px;"
    >
      <div
        class="ms-slider-area "
        style="width: 100%;"
      >
        <h2
          class="ms-main-title"
          style="padding-left: 22px;"
        >
          文件存储NAS
        </h2>
        <div
          class="ms-menu"
        >
          <ul
            class="ant-menu ant-menu-root ant-menu-inline ant-menu-light"
            data-menu-list="true"
            role="menu"
            style="border-right: 0;"
            tabindex="0"
          >
            <li
              class="ant-menu-item ant-menu-item-selected ant-menu-item-only-child"
              data-is-child-page="false"
              data-menu-id="rc-menu-uuid-test-/components/ms-layout"
              role="menuitem"
              style="padding-left: 12px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                文件系统列表
              </span>
            </li>
            <li
              class="ant-menu-item ant-menu-item-only-child"
              data-is-child-page="false"
              data-menu-id="rc-menu-uuid-test-/monitor"
              role="menuitem"
              style="padding-left: 12px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                监控
              </span>
            </li>
          </ul>
          <div
            aria-hidden="true"
            style="display: none;"
          />
        </div>
      </div>
      <div
        class="ms-expansion"
      >
        <span
          aria-label="menu-fold"
          class="anticon anticon-menu-fold"
          role="img"
          style="font-size: 16px;"
        >
          <svg
            aria-hidden="true"
            data-icon="menu-fold"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ms-main"
    >
      <div
        class="ms-breadcrumb"
      >
        <nav
          class="ant-breadcrumb"
        >
          <ol>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                <a
                  href="/"
                >
                  <svg
                    height="14"
                    style="position: relative; top: 2px;"
                    version="1.1"
                    viewBox="0 0 1024 1024"
                    width="14"
                  >
                    <path
                      d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                      fill="#90969E"
                      p-id="2079"
                    />
                    <path
                      d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                      fill="#90969E"
                      p-id="2080"
                    />
                  </svg>
                </a>
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="ms-content-wrap"
      >
        <div
          class="ms-content"
        >
          <div
            class="ant-card ant-card-bordered"
          >
            <div
              class="ant-card-body"
              style="padding: 20px;"
            >
              <div
                class="ms-page"
              >
                <button
                  class="ant-btn ant-btn-primary ant-btn-dangerous"
                  style="margin-bottom: 10px;"
                  type="button"
                >
                  <span>
                    触发 JSX 渲染异常
                  </span>
                </button>
                <div
                  class=""
                >
                  <div
                    class="ms-sub-page"
                  >
                    <div
                      class="ms-title-container"
                    >
                      <div
                        class="ms-title"
                      >
                        <div
                          class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                        >
                          <span
                            class="ant-skeleton-input"
                            style="height: 22px; display: flex;"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-skeleton ant-skeleton-element ant-skeleton-active"
                      >
                        <span
                          class="ant-skeleton-input"
                          style="height: 22px; display: flex;"
                        />
                      </div>
                    </div>
                    <div
                      class="ant-skeleton ant-skeleton-active"
                    >
                      <div
                        class="ant-skeleton-content"
                      >
                        <h3
                          class="ant-skeleton-title"
                          style="width: 38%;"
                        />
                        <ul
                          class="ant-skeleton-paragraph"
                        >
                          <li />
                          <li />
                          <li
                            style="width: 61%;"
                          />
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsLayout 组件 demo 测试 正确渲染 MsLayout group.tsx 1`] = `
<div>
  <div
    style="position: relative;"
  >
    <div
      class="ms-layout"
      style="height: calc(100vh - 0px);"
    >
      <div
        class="ms-slider"
        style="width: 184px;"
      >
        <div
          class="ms-slider-area "
          style="width: 100%;"
        >
          <h2
            class="ms-main-title"
            style="padding-left: 22px;"
          >
            专有网络VPC
          </h2>
          <div
            class="ms-menu"
          >
            <ul
              class="ant-menu ant-menu-root ant-menu-inline ant-menu-light"
              data-menu-list="true"
              role="menu"
              style="border-right: 0;"
              tabindex="0"
            >
              <li
                class="ant-menu-item ant-menu-item-only-child"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/~demos"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  专有网络
                </span>
              </li>
              <li
                class="ant-menu-item ant-menu-item-selected ant-menu-item-only-child"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/~demos/mslayout-demo-roles"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  子网
                </span>
              </li>
              <li
                class="ant-menu-item ant-menu-item-only-child"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/~demos/mslayout-demo-roles22"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  路由表
                </span>
              </li>
              <li
                class="ant-menu-submenu ant-menu-submenu-inline"
                data-is-child-page="false"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-/~demos/mslayout-demo-nat-popup"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-/~demos/mslayout-demo-nat"
                  role="menuitem"
                  style="padding-left: 12px;"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    NAT网关
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
              <li
                class="ant-menu-item-group"
                data-is-child-page="false"
                role="presentation"
              >
                <div
                  class="ant-menu-item-group-title"
                  role="presentation"
                  title="公网访问"
                >
                  公网访问
                </div>
                <ul
                  class="ant-menu-item-group-list"
                  role="group"
                >
                  <li
                    class="ant-menu-item ant-menu-item-only-child"
                    data-is-child-page="false"
                    data-menu-id="rc-menu-uuid-test-/~demos2/mslayout-demo-roles"
                    role="menuitem"
                    style="padding-left: 12px;"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      弹性公网IP
                    </span>
                  </li>
                </ul>
              </li>
              <li
                class="ant-menu-item-group"
                data-is-child-page="false"
                role="presentation"
              >
                <div
                  class="ant-menu-item-group-title"
                  role="presentation"
                  title="网监互联"
                >
                  网监互联
                </div>
                <ul
                  class="ant-menu-item-group-list"
                  role="group"
                >
                  <li
                    class="ant-menu-item ant-menu-item-only-child"
                    data-is-child-page="false"
                    data-menu-id="rc-menu-uuid-test-/~demos2/vpn"
                    role="menuitem"
                    style="padding-left: 12px;"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      VPN网关
                    </span>
                  </li>
                  <li
                    class="ant-menu-item ant-menu-item-only-child"
                    data-is-child-page="false"
                    data-menu-id="rc-menu-uuid-test-/~demos2/dc"
                    role="menuitem"
                    style="padding-left: 12px;"
                    tabindex="-1"
                  >
                    <span
                      class="ant-menu-title-content"
                    >
                      专线网关
                    </span>
                  </li>
                </ul>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            />
          </div>
        </div>
        <div
          class="ms-expansion"
        >
          <span
            aria-label="menu-fold"
            class="anticon anticon-menu-fold"
            role="img"
            style="font-size: 16px;"
          >
            <svg
              aria-hidden="true"
              data-icon="menu-fold"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="ms-main"
      >
        <div
          class="ms-breadcrumb"
        >
          <nav
            class="ant-breadcrumb"
          >
            <ol>
              <li>
                <span
                  class="ant-breadcrumb-link"
                >
                  <a
                    href="/"
                  >
                    <svg
                      height="14"
                      style="position: relative; top: 2px;"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      width="14"
                    >
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2079"
                      />
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2080"
                      />
                    </svg>
                  </a>
                </span>
                <span
                  class="ant-breadcrumb-separator"
                >
                  /
                </span>
              </li>
            </ol>
          </nav>
        </div>
        <div
          class="ms-content-wrap"
        >
          <div
            class="ms-content"
          >
            <div
              class="ant-card ant-card-bordered"
              style="height: 500px;"
            >
              <div
                class="ant-card-body"
              >
                我是内容渲染区域
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsLayout 组件 demo 测试 正确渲染 MsLayout icon.tsx 1`] = `
<div>
  <div
    style="position: relative;"
  >
    <div
      class="ms-layout ms-layout-demo"
      style="height: calc(100vh - 0px);"
    >
      <div
        class="ms-slider"
        style="width: 184px;"
      >
        <div
          class="ms-slider-area "
          style="width: 100%;"
        >
          <h2
            class="ms-main-title"
            style="padding-left: 22px;"
          >
            文件存储NAS
          </h2>
          <div
            class="ms-menu"
          >
            <ul
              class="ant-menu ant-menu-root ant-menu-inline ant-menu-light"
              data-menu-list="true"
              role="menu"
              style="border-right: 0;"
              tabindex="0"
            >
              <li
                class="ant-menu-item ant-menu-item-selected"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/file/filesystem"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="anticon ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M347.429 559.543a18.286 18.286 0 0 1-18.286-18.286v-58.514a18.286 18.286 0 0 1 18.286-18.286H676.57a18.286 18.286 0 0 1 18.286 18.286v58.514a18.286 18.286 0 0 1-18.286 18.286H347.43zm0 87.771a18.286 18.286 0 0 0-18.286 18.286v58.514c0 10.094 8.192 18.286 18.286 18.286H676.57a18.286 18.286 0 0 0 18.286-18.286V665.6a18.286 18.286 0 0 0-18.286-18.286H347.43zM520.63 6.29a14.629 14.629 0 0 0-17.262 0L79.141 314.807a14.629 14.629 0 0 0-5.998 11.776v609.646c0 8.045 6.583 14.628 14.628 14.628H936.23a14.629 14.629 0 0 0 14.628-14.628V326.583a14.629 14.629 0 0 0-5.998-11.776L520.631 6.29zM168.229 367.616 512 117.541l343.771 250.075v488.155H168.23V367.616z"
                    />
                  </svg>
                </span>
                <span
                  class="ant-menu-title-content"
                >
                  文件系统列表
                </span>
              </li>
              <li
                class="ant-menu-item"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/monitor"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="anticon ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m519.168 3.072 493.714 211.602A18.286 18.286 0 0 1 1024 231.497V347.43a18.286 18.286 0 0 1-18.286 18.285h-80.457V768h25.6A73.143 73.143 0 0 1 1024 841.143v164.571a18.286 18.286 0 0 1-18.286 18.286H18.286A18.286 18.286 0 0 1 0 1005.714V841.143A73.143 73.143 0 0 1 73.143 768h25.6V365.714H18.286A18.286 18.286 0 0 1 0 347.43V231.497c0-7.314 4.389-13.897 11.118-16.823L504.832 3.072a18.286 18.286 0 0 1 14.336 0zm409.746 860.014H95.086v65.828h833.828v-65.828zm-98.743-497.372H193.83V768h171.885V585.143a146.286 146.286 0 1 1 292.572 0V768H830.17V365.714zM512 533.943a51.2 51.2 0 0 0-51.2 51.2V768h102.4V585.143a51.2 51.2 0 0 0-51.2-51.2zm0-430.519L121.93 270.629h780.14L512 103.424z"
                    />
                  </svg>
                </span>
                <span
                  class="ant-menu-title-content"
                >
                  监控
                </span>
              </li>
              <li
                class="ant-menu-submenu ant-menu-submenu-inline"
                data-is-child-page="false"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-/test-popup"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-/test"
                  role="menuitem"
                  style="padding-left: 12px;"
                  tabindex="-1"
                >
                  <span
                    class="anticon ant-menu-item-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M559.537 208.565a109.7 109.7 0 1 0-95.074 0v449.403h95.074V208.565zM277.9 543.66a402.013 402.013 0 0 1 124.4-46.513v97.56a291.216 291.216 0 0 0-75.474 30.424c-26.401 15.796-34.665 27.936-37.079 32.836 2.414 4.9 10.678 16.967 37.079 32.837 40.442 24.28 105.604 43.88 185.173 43.88s144.657-19.6 185.173-43.88c26.328-15.87 34.592-27.937 37.079-32.91-2.487-4.827-10.678-16.967-37.079-32.763a291.216 291.216 0 0 0-75.473-30.424v-97.56c48.268 9.947 90.612 26.255 124.4 46.513 59.237 35.47 84.03 77.521 84.03 114.307 0 36.713-24.866 78.765-84.03 114.308-57.63 34.518-140.27 57.41-234.1 57.41-93.83 0-176.544-22.892-234.1-57.41-59.237-35.543-84.103-77.522-84.103-114.308s24.866-78.837 84.104-114.307zm124.4-239.438c-81.91 12.213-158.261 38.103-222.253 76.497C91.265 433.961 3.724 527.426 3.724 657.895c0 130.543 87.54 224.08 176.324 277.321 91.856 55.07 209.6 84.542 331.952 84.542s240.096-29.472 331.952-84.542c88.783-53.24 176.324-146.778 176.324-277.248s-87.54-224.007-176.324-277.248c-63.992-38.394-140.416-64.357-222.252-76.497v96.243c65.308 11.263 124.692 32.545 173.325 61.725 74.011 44.319 130.178 112.113 130.178 195.777 0 83.592-56.167 151.386-130.178 195.778-74.742 44.83-174.934 70.94-283.025 70.94-108.09 0-208.283-26.11-283.025-70.94C154.964 809.354 98.797 741.56 98.797 657.968c0-83.664 56.167-151.385 130.178-195.777 48.633-29.18 108.017-50.462 173.325-61.725v-96.243z"
                      />
                    </svg>
                  </span>
                  <span
                    class="ant-menu-title-content"
                  >
                    测试-展开
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
              <li
                class="ant-menu-item"
                data-is-child-page="true"
                data-menu-id="rc-menu-uuid-test-/file/accessGroup"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="anticon ant-menu-item-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    class=""
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M731.429 365.714a73.143 73.143 0 1 0 0-146.285 73.143 73.143 0 0 0 0 146.285zM1009.37 0C1017.417 0 1024 6.583 1024 14.629v87.625c-12.069 205.385-131.803 396.434-314.66 502.345l-8.12 235.959-240.42 136.85a620.47 620.47 0 0 0-63.927-143.14l-26.697 26.623a482.523 482.523 0 0 1-214.235 124.343L23.552 1018.15a14.629 14.629 0 0 1-17.7-17.701l32.914-132.389a482.597 482.597 0 0 1 124.343-214.308l26.624-26.624A619.3 619.3 0 0 0 46.592 563.2l136.777-240.42 236.032-8.12C525.166 131.804 716.361 12.07 921.746 0h87.625zM267.922 683.593 230.4 721.115a387.365 387.365 0 0 0-99.474 171.008l-.44 1.39 1.464-.366A387.365 387.365 0 0 0 302.81 793.6l37.523-37.522a620.983 620.983 0 0 0-72.412-72.485zM928.768 95.232h-4.096C753.225 106.203 591.652 207.067 501.76 362.35l-26.331 45.64-235.52 8.047-56.467 99.181a715.63 715.63 0 0 1 325.34 325.34l99.108-56.393 8.12-235.52 45.64-26.405c155.283-89.966 256.147-251.465 267.118-422.912v-4.096z"
                    />
                  </svg>
                </span>
                <span
                  class="ant-menu-title-content"
                >
                  权限组列表
                </span>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            />
          </div>
        </div>
        <div
          class="ms-expansion"
        >
          <span
            aria-label="menu-fold"
            class="anticon anticon-menu-fold"
            role="img"
            style="font-size: 16px;"
          >
            <svg
              aria-hidden="true"
              data-icon="menu-fold"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="ms-main"
      >
        <div
          class="ms-breadcrumb"
        >
          <nav
            class="ant-breadcrumb"
          >
            <ol>
              <li>
                <span
                  class="ant-breadcrumb-link"
                >
                  <a
                    href="/"
                  >
                    <svg
                      height="14"
                      style="position: relative; top: 2px;"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      width="14"
                    >
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2079"
                      />
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2080"
                      />
                    </svg>
                  </a>
                </span>
                <span
                  class="ant-breadcrumb-separator"
                >
                  /
                </span>
              </li>
            </ol>
          </nav>
        </div>
        <div
          class="ms-content-wrap"
        >
          <div
            class="ms-content"
          >
            <div
              class="ant-card ant-card-bordered"
              style="height: 500px;"
            >
              <div
                class="ant-card-body"
              >
                我是内容渲染区域
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsLayout 组件 demo 测试 正确渲染 MsLayout index.tsx 1`] = `
<div>
  <div
    class="ms-layout ms-layout-demo"
    style="height: calc(100vh - 0px);"
  >
    <div
      class="ms-slider"
      style="width: 184px;"
    >
      <div
        class="ms-slider-area "
        style="width: 100%;"
      >
        <h2
          class="ms-main-title"
          style="padding-left: 22px;"
        >
          文件存储NAS
        </h2>
        <div
          class="ms-menu"
        >
          <ul
            class="ant-menu ant-menu-root ant-menu-inline ant-menu-light"
            data-menu-list="true"
            role="menu"
            style="border-right: 0;"
            tabindex="0"
          >
            <li
              class="ant-menu-item ant-menu-item-only-child"
              data-is-child-page="false"
              data-menu-id="rc-menu-uuid-test-/~demos/mslayout-demo-__demo__"
              role="menuitem"
              style="padding-left: 12px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                文件系统列表
              </span>
            </li>
            <li
              class="ant-menu-item ant-menu-item-only-child"
              data-is-child-page="false"
              data-menu-id="rc-menu-uuid-test-/monitor"
              link="https://www.baidu.com"
              role="menuitem"
              style="padding-left: 12px;"
              tabindex="-1"
            >
              <span
                class="ant-menu-title-content"
              >
                <a
                  href="https://www.baidu.com"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  监控-跳转到新页面
                  <span
                    style="position: absolute; right: 15px;"
                  >
                    <span
                      aria-label="disconnect"
                      class="anticon anticon-disconnect"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="disconnect"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M832.6 191.4c-84.6-84.6-221.5-84.6-306 0l-96.9 96.9 51 51 96.9-96.9c53.8-53.8 144.6-59.5 204 0 59.5 59.5 53.8 150.2 0 204l-96.9 96.9 51.1 51.1 96.9-96.9c84.4-84.6 84.4-221.5-.1-306.1zM446.5 781.6c-53.8 53.8-144.6 59.5-204 0-59.5-59.5-53.8-150.2 0-204l96.9-96.9-51.1-51.1-96.9 96.9c-84.6 84.6-84.6 221.5 0 306s221.5 84.6 306 0l96.9-96.9-51-51-96.8 97zM260.3 209.4a8.03 8.03 0 00-11.3 0L209.4 249a8.03 8.03 0 000 11.3l554.4 554.4c3.1 3.1 8.2 3.1 11.3 0l39.6-39.6c3.1-3.1 3.1-8.2 0-11.3L260.3 209.4z"
                        />
                      </svg>
                    </span>
                  </span>
                </a>
              </span>
            </li>
            <li
              class="ant-menu-submenu ant-menu-submenu-inline"
              data-is-child-page="false"
              role="none"
            >
              <div
                aria-controls="rc-menu-uuid-test-/file/accessGroup-popup"
                aria-expanded="false"
                aria-haspopup="true"
                class="ant-menu-submenu-title"
                data-menu-id="rc-menu-uuid-test-/file/accessGroup"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  权限组
                </span>
                <i
                  class="ant-menu-submenu-arrow"
                />
              </div>
            </li>
          </ul>
          <div
            aria-hidden="true"
            style="display: none;"
          />
        </div>
      </div>
      <div
        class="ms-expansion"
      >
        <span
          aria-label="menu-fold"
          class="anticon anticon-menu-fold"
          role="img"
          style="font-size: 16px;"
        >
          <svg
            aria-hidden="true"
            data-icon="menu-fold"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ms-main"
    >
      <div
        class="ms-breadcrumb"
      >
        <nav
          class="ant-breadcrumb"
        >
          <ol>
            <li>
              <span
                class="ant-breadcrumb-link"
              >
                <a
                  href="/"
                >
                  <svg
                    height="14"
                    style="position: relative; top: 2px;"
                    version="1.1"
                    viewBox="0 0 1024 1024"
                    width="14"
                  >
                    <path
                      d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                      fill="#90969E"
                      p-id="2079"
                    />
                    <path
                      d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                      fill="#90969E"
                      p-id="2080"
                    />
                  </svg>
                </a>
              </span>
              <span
                class="ant-breadcrumb-separator"
              >
                /
              </span>
            </li>
          </ol>
        </nav>
        <div>
          <div>
            支持插槽：
            <div
              class="ant-select ant-select-sm ant-select-single ant-select-show-arrow"
              style="width: 120px;"
            >
              <div
                class="ant-select-selector"
              >
                <span
                  class="ant-select-selection-search"
                >
                  <input
                    aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                    aria-autocomplete="list"
                    aria-controls="rc_select_TEST_OR_SSR_list"
                    aria-haspopup="listbox"
                    aria-owns="rc_select_TEST_OR_SSR_list"
                    autocomplete="off"
                    class="ant-select-selection-search-input"
                    id="rc_select_TEST_OR_SSR"
                    readonly=""
                    role="combobox"
                    style="opacity: 0;"
                    type="search"
                    unselectable="on"
                    value=""
                  />
                </span>
                <span
                  class="ant-select-selection-item"
                  title="Lucy"
                >
                  Lucy
                </span>
              </div>
              <span
                aria-hidden="true"
                class="ant-select-arrow"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  aria-label="down"
                  class="anticon anticon-down ant-select-suffix"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="down"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ms-content-wrap"
      >
        <div
          class="ms-content"
        >
          <div
            class="ant-card ant-card-bordered"
            style="height: 500px;"
          >
            <div
              class="ant-card-body"
            >
              我是内容渲染区域
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MsLayout 组件 demo 测试 正确渲染 MsLayout roles.tsx 1`] = `
<div>
  <div>
    <div
      class="ms-layout"
      style="height: calc(100vh - 0px);"
    >
      <div
        class="ms-slider"
        style="width: 184px;"
      >
        <div
          class="ms-slider-area "
          style="width: 100%;"
        >
          <h2
            class="ms-main-title"
            style="padding-left: 22px;"
          >
            文件存储NAS
          </h2>
          <div
            class="ms-menu"
          >
            <ul
              class="ant-menu ant-menu-root ant-menu-inline ant-menu-light"
              data-menu-list="true"
              role="menu"
              style="border-right: 0;"
              tabindex="0"
            >
              <li
                class="ant-menu-submenu ant-menu-submenu-inline ant-menu-submenu-selected"
                data-is-child-page="false"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-/~demos-popup"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-/~demos"
                  role="menuitem"
                  style="padding-left: 12px;"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    文件系统列表
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
              <li
                class="ant-menu-submenu ant-menu-submenu-inline"
                data-is-child-page="false"
                role="none"
              >
                <div
                  aria-controls="rc-menu-uuid-test-/~demos2-popup"
                  aria-expanded="false"
                  aria-haspopup="true"
                  class="ant-menu-submenu-title"
                  data-menu-id="rc-menu-uuid-test-/~demos2"
                  role="menuitem"
                  style="padding-left: 12px;"
                  tabindex="-1"
                >
                  <span
                    class="ant-menu-title-content"
                  >
                    文件系统列表2
                  </span>
                  <i
                    class="ant-menu-submenu-arrow"
                  />
                </div>
              </li>
              <li
                class="ant-menu-item ant-menu-item-only-child"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/monitor"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  监控
                </span>
              </li>
              <li
                class="ant-menu-item ant-menu-item-only-child"
                data-is-child-page="false"
                data-menu-id="rc-menu-uuid-test-/file/accessGroup"
                link="http://www.baidu.com"
                role="menuitem"
                style="padding-left: 12px;"
                tabindex="-1"
              >
                <span
                  class="ant-menu-title-content"
                >
                  <a
                    href="http://www.baidu.com"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    权限组列表
                    <span
                      style="position: absolute; right: 15px;"
                    >
                      <span
                        aria-label="disconnect"
                        class="anticon anticon-disconnect"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="disconnect"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M832.6 191.4c-84.6-84.6-221.5-84.6-306 0l-96.9 96.9 51 51 96.9-96.9c53.8-53.8 144.6-59.5 204 0 59.5 59.5 53.8 150.2 0 204l-96.9 96.9 51.1 51.1 96.9-96.9c84.4-84.6 84.4-221.5-.1-306.1zM446.5 781.6c-53.8 53.8-144.6 59.5-204 0-59.5-59.5-53.8-150.2 0-204l96.9-96.9-51.1-51.1-96.9 96.9c-84.6 84.6-84.6 221.5 0 306s221.5 84.6 306 0l96.9-96.9-51-51-96.8 97zM260.3 209.4a8.03 8.03 0 00-11.3 0L209.4 249a8.03 8.03 0 000 11.3l554.4 554.4c3.1 3.1 8.2 3.1 11.3 0l39.6-39.6c3.1-3.1 3.1-8.2 0-11.3L260.3 209.4z"
                          />
                        </svg>
                      </span>
                    </span>
                  </a>
                </span>
              </li>
            </ul>
            <div
              aria-hidden="true"
              style="display: none;"
            />
          </div>
        </div>
        <div
          class="ms-expansion"
        >
          <span
            aria-label="menu-fold"
            class="anticon anticon-menu-fold"
            role="img"
            style="font-size: 16px;"
          >
            <svg
              aria-hidden="true"
              data-icon="menu-fold"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="ms-main"
      >
        <div
          class="ms-breadcrumb"
        >
          <nav
            class="ant-breadcrumb"
          >
            <ol>
              <li>
                <span
                  class="ant-breadcrumb-link"
                >
                  <a
                    href="/"
                  >
                    <svg
                      height="14"
                      style="position: relative; top: 2px;"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      width="14"
                    >
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2079"
                      />
                      <path
                        d="M365.714286 563.2a21.942857 21.942857 0 0 0-21.942857 21.942857v270.628572H168.228571V367.616L512 117.613714l343.771429 250.002286V855.771429H680.228571V585.142857a21.942857 21.942857 0 0 0-21.942857-21.942857H365.714286zM520.630857 6.290286a14.628571 14.628571 0 0 0-17.261714 0l-424.228572 308.516571A14.628571 14.628571 0 0 0 73.142857 326.656V936.228571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V665.6a7.314286 7.314286 0 0 1 7.314286-7.314286h131.657142a7.314286 7.314286 0 0 1 7.314286 7.314286v270.628571c0 8.045714 6.582857 14.628571 14.628572 14.628572h336.457142a14.628571 14.628571 0 0 0 14.628572-14.628572V326.656a14.628571 14.628571 0 0 0-5.997714-11.849143L520.630857 6.290286z"
                        fill="#90969E"
                        p-id="2080"
                      />
                    </svg>
                  </a>
                </span>
                <span
                  class="ant-breadcrumb-separator"
                >
                  /
                </span>
              </li>
            </ol>
          </nav>
        </div>
        <div
          class="ms-content-wrap"
        >
          <div
            class="ms-content"
          >
            <div
              class="ant-card ant-card-bordered"
              style="height: 500px;"
            >
              <div
                class="ant-card-body"
              >
                <div
                  class="ant-radio-group ant-radio-group-solid"
                >
                  <label
                    class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"
                  >
                    <span
                      class="ant-radio-button ant-radio-button-checked"
                    >
                      <input
                        checked=""
                        class="ant-radio-button-input"
                        type="radio"
                        value="admin"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      我是admin角色
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="user"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      我是user角色
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="admin2"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      我是admin2角色
                    </span>
                  </label>
                  <label
                    class="ant-radio-button-wrapper"
                  >
                    <span
                      class="ant-radio-button"
                    >
                      <input
                        class="ant-radio-button-input"
                        type="radio"
                        value="admin3"
                      />
                      <span
                        class="ant-radio-button-inner"
                      />
                    </span>
                    <span>
                      我是admin3角色
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
